Исправить checktsyle-ошибки